--- a/wladder/app/views/home/show.html.erb
+++ b/wladder/app/views/home/show.html.erb
@@ -2,7 +2,9 @@
 
 <h1><%= "Your Guesses" %></h1>
 <p><%= "$ whois #{@query_text} returned" %></p>
+<p><%= "Bellow is testing the array and shit" %></p>
 <br>
+
 <% @result.each do |line| %>
     <%= line %>
     <br>
