--- a/wbib/app/views/references/index.html.erb
+++ b/wbib/app/views/references/index.html.erb
@@ -21,6 +21,7 @@
 
 			<td><%= link_to 'Show', reference %></td>
 			<td><%= link_to 'Edit', edit_reference_path(reference) %></td>
+			<td><%= link_to 'Delete', reference, method: :delete, data: { confirm: "Are you sure you want to delete #{reference.topic}?" } %></td>
 		</tr>
 		<% end %>
 	</tbody>
