--- a/wbib/app/views/references/edit.html.erb
+++ b/wbib/app/views/references/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing References</h1>
+<h1><u>Editing References</u></h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @reference %>|
+<br>
+<%= link_to 'Show', @reference %> | 
 <%= link_to 'Back', references_path %>
