--- a/wbib/app/views/references/index.html.erb
+++ b/wbib/app/views/references/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing references</h1>
+<h1><u>Listing References</u></h1>
 
 <table>
 	<thead>
@@ -7,7 +7,7 @@
 			<th>Topic</th>
 			<th>Annotation</th>
 			<th>Time/Date</th>
-			<th colspan="3"></th>
+			<th colspan="5"></th>
 		</tr>
 	</thead>
 
@@ -17,7 +17,7 @@
 			<td><%= reference.url %></td>
 			<td><%= reference.topic %></td>
 			<td><%= reference.annotation %></td>
-			<td><%= reference.timedate %></td>
+			<td><%= reference.updated_at %></td>
 
 			<td><%= link_to 'Show', reference %></td>
 			<td><%= link_to 'Edit', edit_reference_path(reference) %></td>
@@ -26,5 +26,5 @@
 		<% end %>
 	</tbody>
 
-	<%= link_to 'New Reference', controller: "references", action: "new" %>
+	<h2><%= link_to 'New Reference', controller: "references", action: "new" %></h2><br>
 </table>
