--- a/img/app/views/images/_form.html.erb
+++ b/img/app/views/images/_form.html.erb
@@ -16,7 +16,7 @@
     <%= f.text_field :filename %>
   </div>
   <div class="field">
-    <%= f.label :status %><br>
+    <%= 'Private?' %><br>
     <%= f.check_box :status %>
   </div>
   <div class="field">
