--- a/img/app/views/images/index.html.erb
+++ b/img/app/views/images/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Filename</th>
-      <th>Status</th>
+      <th>Private?</th>
       <th>User</th>
       <th colspan="3"></th>
     </tr>
@@ -16,7 +16,11 @@
     <% @images.each do |image| %>
       <tr>
         <td><%= image.filename %></td>
-        <td><%= image.status %></td>
+        <% if image.status == true %>
+           <td><%= 'Yes' %></td>
+        <% else %>
+            <td><%= 'No' %></td>
+        <% end %>
         <td><%= image.user_id %></td>
         <td><%= link_to 'Show', image %></td>
         <td><%= link_to 'Edit', edit_image_path(image) %></td>
