Reverted to previous commit

--- a/img/app/views/images/index.html.erb
+++ b/img/app/views/images/index.html.erb
@@ -8,6 +8,7 @@
       <th>Filename</th>
       <th>Private?</th>
       <th>User</th>
+      <th>File</th>
       <th colspan="3"></th>
     </tr>
   </thead>
