--- a/img/app/views/images/_form.html.erb
+++ b/img/app/views/images/_form.html.erb
@@ -13,7 +13,8 @@
 
   <div class="field">
     <%= f.label :filename %><br>
-    <%= f.text_field :filename %>
+    <%= f.text_field :filename %><br>
+    <%= f.file_field :uploaded_file %>
   </div>
   <div class="field">
     <%= 'Private?' %><br>
