--- a/img/app/views/images/show.html.erb
+++ b/img/app/views/images/show.html.erb
@@ -1,19 +1,29 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+    <%= image_tag root_url + "/images/" + @image.filename, size: "300x300", alt: @image.filename %>
+</p>
+
+<p>
   <strong>Filename:</strong>
   <%= @image.filename %>
 </p>
 
 <p>
   <strong>Status:</strong>
-  <%= @image.status %>
+  <% if @image.status == true %>
+    <%= 'Private' %>
+  <% else %>
+    <%= 'Public' %>
+  <% end %>
 </p>
 
 <p>
   <strong>User:</strong>
-  <%= @image.user %>
+  <%= @image.user.name %>
 </p>
 
-<%= link_to 'Edit', edit_image_path(@image) %> |
+<% if @image.user == current_user %>
+    <%= link_to 'Edit', edit_image_path(@image) %> |
+<% end %>
 <%= link_to 'Back', images_path %>
