--- a/img/app/views/images/_form.html.erb
+++ b/img/app/views/images/_form.html.erb
@@ -13,16 +13,20 @@
 
   <div class="field">
     <%= f.label :filename %><br>
-    <%= f.text_field :filename %>
+    <%= f.text_field :filename %><br>
+    <%= f.file_field :uploaded_file %>
   </div>
+
   <div class="field">
-    <%= f.label :status %><br>
+    <%= 'Private?'  %><br>
     <%= f.check_box :status %>
   </div>
+
   <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
+    <%= f.label :user_id %><%= ':' %>
+    <%= current_user.name %>
   </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
