--- a/img/app/views/images/show.html.erb
+++ b/img/app/views/images/show.html.erb
@@ -25,5 +25,6 @@
 
 <% if @image.user == current_user %>
     <%= link_to 'Edit', edit_image_path(@image) %> |
+    <%= link_to 'Delete', @image, method: :delete, data: { confirm: 'Delete Image?' } %> |
 <% end %>
 <%= link_to 'Back', images_path %>
