--- a/img/app/views/images/show.html.erb
+++ b/img/app/views/images/show.html.erb
@@ -5,18 +5,13 @@
 </p>
 
 <p>
-  <strong>Filename:</strong>
-  <%= @image.filename %>
-</p>
-
-<p>
   <strong>User:</strong>
   <%= @image.user.name %>
 </p>
 
 <p>
   <strong>Tags:</strong>
-  <%= @image.tags %>
+  <%= @image.tags.all %>
 </p>
 
 <p>
@@ -32,7 +27,7 @@
     <strong>Users With Access:</strong><br>
     <% if @image.status == true %>
         <% @image.image_users.each do |list| %>
-            <%= list.image_users.name %>
+            <%= list.user_id %>
         <% end %>
     <% else %>
         <%= 'Everyone' %>
@@ -40,8 +35,8 @@
     <% if @image.user == current_user %>
         <%= form_for @image, :image_users => { :action => "update" } do |form| %>
             <strong><%= 'Who can access this image?' %></strong>
-            <%= form.collection_select :image_users, User.all.order(:name), :name, :name %><br>
-            <%= form.submit %><br>
+            <%= form.collection_select :image_users, User.all.order(:name), :name, :name, :include_blank => '' %><br>
+            <%= form.submit %>
         <% end %>
     <% end %>
 </p>
@@ -56,7 +51,7 @@
 
 <br>
 <% if @image.user == current_user %>
-    <%= link_to 'Edit', edit_image_path(@image) %> |
+    <%# link_to 'Edit', edit_image_path(@image) %> 
     <%= link_to 'Delete', @image, method: :delete, data: { confirm: 'Delete Image?' } %> |
 <% end %>
 <%= link_to 'Back', images_path %>
