--- a/img/app/assets/stylesheets/images.css
+++ b/img/app/assets/stylesheets/images.css
@@ -1,3 +1,18 @@
 // Place all the styles related to the Images controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+pad {
+    padding-top: 50px;
+    padding-right: 50px;
+    padding-bottom: 50px;
+    padding-left: 50px;
+}
+
+fltr {
+    float: left;
+}
+
+cbox {
+    transform: scale(1.5);
+}
