--- a/vpet/app/views/games/_form.html.erb
+++ b/vpet/app/views/games/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :game_prize %><br>
-    <%= f.text_field :game_prize %>
+    <%= f.number_field :game_prize %>
   </div>
   <div class="field">
     <%= f.label :user_id %><br>
