--- a/vpet/app/views/inventories/_form.html.erb
+++ b/vpet/app/views/inventories/_form.html.erb
@@ -24,8 +24,8 @@
     <%= f.text_field :item_des %>
   </div>
   <div class="field">
-    <%= f.label :game_prize %><br>
-    <%= f.number_field :game_prize %>
+    <%= f.label :money %><br>
+    <%= f.number_field :money %>
   </div>
   <div class="field">
     <%= f.label :user_id %><br>
