--- a/vpet/app/views/inventories/index.html.erb
+++ b/vpet/app/views/inventories/index.html.erb
@@ -8,7 +8,7 @@
       <th>Item name</th>
       <th>Item effect</th>
       <th>Item des</th>
-      <th>Game prize</th>
+      <th>Money</th>
       <th>User</th>
       <th colspan="3"></th>
     </tr>
@@ -20,7 +20,7 @@
         <td><%= inventory.item_name %></td>
         <td><%= inventory.item_effect %></td>
         <td><%= inventory.item_des %></td>
-        <td><%= inventory.game_prize %></td>
+        <td><%= inventory.money %></td>
         <td><%= inventory.user %></td>
         <td><%= link_to 'Show', inventory %></td>
         <td><%= link_to 'Edit', edit_inventory_path(inventory) %></td>
