--- a/vpet/app/views/pets/show.html.erb
+++ b/vpet/app/views/pets/show.html.erb
@@ -51,6 +51,11 @@
 </p>
 
 <p>
+  <strong>User:</strong>
+  <%= @pet.user %>
+</p>
+
+<p>
   <strong>Highscore:</strong>
   <%= @pet.highscore %>
 </p>
