--- a/vpet/app/views/inventories/show.html.erb
+++ b/vpet/app/views/inventories/show.html.erb
@@ -16,8 +16,8 @@
 </p>
 
 <p>
-  <strong>Game prize:</strong>
-  <%= @inventory.game_prize %>
+  <strong>Money:</strong>
+  <%= @inventory.money %>
 </p>
 
 <p>
