--- a/vpet/app/views/pets/_form.html.erb
+++ b/vpet/app/views/pets/_form.html.erb
@@ -52,6 +52,10 @@
     <%= f.datetime_select :age %>
   </div>
   <div class="field">
+    <%= f.label :user_id %><br>
+    <%= f.text_field :user_id %>
+  </div>
+  <div class="field">
     <%= f.label :highscore_id %><br>
     <%= f.text_field :highscore_id %>
   </div>
