--- a/vpet/app/views/pets/index.html.erb
+++ b/vpet/app/views/pets/index.html.erb
@@ -15,6 +15,7 @@
       <th>Strength</th>
       <th>Defense</th>
       <th>Age</th>
+      <th>User</th>
       <th>Highscore</th>
       <th colspan="3"></th>
     </tr>
@@ -33,6 +34,7 @@
         <td><%= pet.strength %></td>
         <td><%= pet.defense %></td>
         <td><%= pet.age %></td>
+        <td><%= pet.user %></td>
         <td><%= pet.highscore %></td>
         <td><%= link_to 'Show', pet %></td>
         <td><%= link_to 'Edit', edit_pet_path(pet) %></td>
