Pet index almost complete

--- a/vpet/app/views/pets/_form.html.erb
+++ b/vpet/app/views/pets/_form.html.erb
@@ -12,52 +12,16 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= 'Your Pet\'s Name' %><br>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :sex %><br>
+    <%= 'Is Your Pet Male?' %><br>
     <%= f.check_box :sex %>
   </div>
   <div class="field">
-    <%= f.label :health %><br>
-    <%= f.number_field :health %>
-  </div>
-  <div class="field">
-    <%= f.label :clean %><br>
-    <%= f.number_field :clean %>
-  </div>
-  <div class="field">
-    <%= f.label :mood %><br>
-    <%= f.number_field :mood %>
-  </div>
-  <div class="field">
-    <%= f.label :status %><br>
-    <%= f.check_box :status %>
-  </div>
-  <div class="field">
-    <%= f.label :asleep %><br>
-    <%= f.check_box :asleep %>
-  </div>
-  <div class="field">
-    <%= f.label :strength %><br>
-    <%= f.number_field :strength %>
-  </div>
-  <div class="field">
-    <%= f.label :defense %><br>
-    <%= f.number_field :defense %>
-  </div>
-  <div class="field">
-    <%= f.label :age %><br>
-    <%= f.datetime_select :age %>
-  </div>
-  <div class="field">
     <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :highscore_id %><br>
-    <%= f.text_field :highscore_id %>
+    <%= current_user.name %>
   </div>
   <div class="actions">
     <%= f.submit %>
