--- a/vpet/app/views/pets/show.html.erb
+++ b/vpet/app/views/pets/show.html.erb
@@ -52,7 +52,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= @pet.user %>
+  <%= @pet.user.name %>
 </p>
 
 <p>
@@ -60,5 +60,4 @@
   <%= @pet.highscore %>
 </p>
 
-<%= link_to 'Edit', edit_pet_path(@pet) %> |
 <%= link_to 'Back', pets_path %>
