--- a/vpet/app/views/pets/index.html.erb
+++ b/vpet/app/views/pets/index.html.erb
@@ -1,13 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Pets</h1>
+<h1>TamagotChico</h1>
 
-<br>
 <% if user_signed_in? %>
     <h2><%= 'Welcome ' + current_user.name + '!' %></h2><br>
         <%= 'Not ' + current_user.name + '? ' %>
-        <%= link_to 'Logout', destroy_user_session_path, mthod: :delete %><br>
-        <%= link_to 'Profile', edit_user_registration_path %><br>
+        <%= link_to 'Logout', destroy_user_session_path, method: :delete %><br>
+        <%= link_to 'Profile', edit_user_registration_path %><br><br>
 <% else %>
     <h2><%= 'You must be logged in to see your pet: ' %>
         <%= link_to 'Log In', new_user_session_path %></h2><br>
@@ -18,26 +17,46 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Sex</th>
-      <th>Health</th>
-      <th>Clean</th>
-      <th>Mood</th>
-      <th>Status</th>
-      <th>Asleep</th>
-      <th>Strength</th>
-      <th>Defense</th>
-      <th>Age</th>
-      <th>User</th>
-      <th>Highscore</th>
-      <th colspan="3"></th>
+      
+      <% if user_signed_in? %>
+        <th>Your Pet's Name</th>
+      <% else %>
+        <th>Users With Pets</th>
+        <th>Name</th>
+      <% end %>
+        
+      <%# COMMENT BLOCK %><% if false %>
+        <th>Sex</th>
+        <th>Health</th>
+        <th>Clean</th>
+        <th>Mood</th>
+        <th>Status</th>
+        <th>Asleep</th>
+        <th>Strength</th>
+        <th>Defense</th>
+        <th>Age</th>
+        <th>User</th>
+        <th>Highscore</th>
+        <th>Owner</th>
+      <% end %><%# END COMMENT BLOCK %>
+
+      <th colspan="10"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @pets.each do |pet| %>
       <tr>
-        <td><%= pet.name %></td>
+        <% if !user_signed_in? %>
+            <td><%= pet.name %></td>
+            <td><%= pet.user.name %></td>
+        <% else %>
+            <% if pet.user == current_user %>
+                <td><%= pet.name %></td>
+            <% end %>
+        <% end %>
+      
+        <%# COMMENT BLOCK %><% if false %>
         <td><%= pet.sex %></td>
         <td><%= pet.health %></td>
         <td><%= pet.clean %></td>
@@ -47,11 +66,16 @@
         <td><%= pet.strength %></td>
         <td><%= pet.defense %></td>
         <td><%= pet.age %></td>
-        <td><%= pet.user %></td>
+        <td><%= pet.user.name %></td>
         <td><%= pet.highscore %></td>
-        <td><%= link_to 'Show', pet %></td>
-        <td><%= link_to 'Edit', edit_pet_path(pet) %></td>
-        <td><%= link_to 'Destroy', pet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %><%# END COMMENT BLOCK %>
+
+        <% if pet.user == current_user %>
+            <td><%= link_to 'Your Pet\'s Stats', pet %></td>
+            <td><%= link_to 'Edit', edit_pet_path(pet) %></td>
+            <td><%= link_to 'Euthanize', pet, method: :delete, data: { confirm: 'Really? Are you sure? =(' } %></td>
+        <% end %>
+
       </tr>
     <% end %>
   </tbody>
@@ -59,4 +83,12 @@
 
 <br>
 
-<%= link_to 'New Pet', new_pet_path %>
+<%# still has problems, will leave for now %>
+<%# if user_signed_in? %>
+    <% @pets.each do |pet| %>
+        <% if pet.user == current_user %>
+            <%= 'You do not have a pet. Adopt a new one?' %>
+            <%= link_to 'New Pet', new_pet_path %>
+        <% end %>
+    <% end %>
+<%# end %>
