--- a/vpet/app/views/shops/index.html.erb
+++ b/vpet/app/views/shops/index.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Shops</h1>
+<h1>Welcome to the Shop!</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Item name</th>
-      <th>Item des</th>
+      <th>Item Name</th>
+      <th>Item Description</th>
       <th>Price</th>
       <th>User</th>
       <th colspan="3"></th>
@@ -23,6 +23,7 @@
         <td><%= link_to 'Show', shop %></td>
         <td><%= link_to 'Edit', edit_shop_path(shop) %></td>
         <td><%= link_to 'Destroy', shop, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%# link_to 'Purchase', inventory_url, method: :post, data: { confirm: 'Purchase ' + shop.item_name + '?' } %></td>
       </tr>
     <% end %>
   </tbody>
