Pet index almost complete. Need to fix controllers and start on next objects

--- a/vpet/app/views/pets/_form.html.erb
+++ b/vpet/app/views/pets/_form.html.erb
@@ -16,52 +16,8 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :sex %><br>
+    <%= 'Male?' %><br>
     <%= f.check_box :sex %>
-  </div>
-  <div class="field">
-    <%= f.label :health %><br>
-    <%= f.number_field :health %>
-  </div>
-  <div class="field">
-    <%= f.label :clean %><br>
-    <%= f.number_field :clean %>
-  </div>
-  <div class="field">
-    <%= f.label :mood %><br>
-    <%= f.number_field :mood %>
-  </div>
-  <div class="field">
-    <%= f.label :status %><br>
-    <%= f.check_box :status %>
-  </div>
-  <div class="field">
-    <%= f.label :asleep %><br>
-    <%= f.check_box :asleep %>
-  </div>
-  <div class="field">
-    <%= f.label :age %><br>
-    <%= f.datetime_select :age %>
-  </div>
-  <div class="field">
-    <%= f.label :money %><br>
-    <%= f.number_field :money %>
-  </div>
-  <div class="field">
-    <%= f.label :user %><br>
-    <%= f.text_field :user %>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :highscore_id %><br>
-    <%= f.text_field :highscore_id %>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
