Clean update function finished

--- a/vpet/app/views/pets/index.html.erb
+++ b/vpet/app/views/pets/index.html.erb
@@ -97,7 +97,7 @@
     <% end %>
     <% if temp == false %>
         <%= 'You do not have a pet yet or your pet has died.' %><br>
-        <%= link_to 'New Pet', new_pet_path %>
+        <%= link_to 'Adopt a Pet', new_pet_path %>
     <% else %>
         <%= 'You may only have one pet at a time.' %>
     <% end %>
